media/radarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: radarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
